Table "addresses" {
  "id" "bigint unsigned" [pk, not null, increment]
  "user_id" "bigint unsigned" [not null]
  "city" varchar(255)
  "province" varchar(255)
  "latitude" decimal(10,7)
  "longitude" decimal(10,7)
  "created_at" timestamp
  "updated_at" timestamp
}

Table "cache" {
  "key" varchar(255) [pk, not null]
  "value" mediumtext [not null]
  "expiration" bigint [not null]

  Indexes {
    expiration [type: btree, name: "cache_expiration_index"]
  }
}

Table "cache_locks" {
  "key" varchar(255) [pk, not null]
  "owner" varchar(255) [not null]
  "expiration" bigint [not null]

  Indexes {
    expiration [type: btree, name: "cache_locks_expiration_index"]
  }
}

Table "comments" {
  "id" "bigint unsigned" [pk, not null, increment]
  "user_id" "bigint unsigned" [not null]
  "product_id" "bigint unsigned" [not null]
  "content" text [not null]
  "rating" int
  "created_at" timestamp
  "updated_at" timestamp
}

Table "exchanges" {
  "id" "bigint unsigned" [pk, not null, increment]
  "user_offering_id" "bigint unsigned" [not null]
  "user_receiving_id" "bigint unsigned" [not null]
  "product_offered_id" "bigint unsigned" [not null]
  "product_requested_id" "bigint unsigned" [not null]
  "status" varchar(255) [not null, default: 'pending']
  "created_at" timestamp
  "updated_at" timestamp
}

Table "failed_jobs" {
  "id" "bigint unsigned" [pk, not null, increment]
  "uuid" varchar(255) [unique, not null]
  "connection" text [not null]
  "queue" text [not null]
  "payload" longtext [not null]
  "exception" longtext [not null]
  "failed_at" timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table "job_batches" {
  "id" varchar(255) [pk, not null]
  "name" varchar(255) [not null]
  "total_jobs" int [not null]
  "pending_jobs" int [not null]
  "failed_jobs" int [not null]
  "failed_job_ids" longtext [not null]
  "options" mediumtext
  "cancelled_at" int
  "created_at" int [not null]
  "finished_at" int
}

Table "jobs" {
  "id" "bigint unsigned" [pk, not null, increment]
  "queue" varchar(255) [not null]
  "payload" longtext [not null]
  "attempts" "tinyint unsigned" [not null]
  "reserved_at" "int unsigned"
  "available_at" "int unsigned" [not null]
  "created_at" "int unsigned" [not null]

  Indexes {
    queue [type: btree, name: "jobs_queue_index"]
  }
}

Table "messages" {
  "id" "bigint unsigned" [pk, not null, increment]
  "sender_id" "bigint unsigned" [not null]
  "receiver_id" "bigint unsigned" [not null]
  "content" text [not null]
  "created_at" timestamp
  "updated_at" timestamp
}

Table "migrations" {
  "id" "int unsigned" [pk, not null, increment]
  "migration" varchar(255) [not null]
  "batch" int [not null]
}

Table "notifications" {
  "id" "bigint unsigned" [pk, not null, increment]
  "user_id" "bigint unsigned" [not null]
  "type" varchar(255) [not null]
  "message" text [not null]
  "read" tinyint(1) [not null, default: 0]
  "created_at" timestamp
  "updated_at" timestamp
}

Table "password_reset_tokens" {
  "email" varchar(255) [pk, not null]
  "token" varchar(255) [not null]
  "created_at" timestamp
}

Table "personas" {
  "id" varchar(20)
  "nombre" varchar(100)
}

Table "product_images" {
  "id" "bigint unsigned" [pk, not null, increment]
  "product_id" "bigint unsigned" [not null]
  "url" varchar(255) [not null]
  "is_main" tinyint(1) [not null, default: 0]
  "created_at" timestamp
  "updated_at" timestamp
}

Table "product_types" {
  "id" "bigint unsigned" [pk, not null, increment]
  "name" varchar(255) [not null]
  "created_at" timestamp
  "updated_at" timestamp
}

Table "products" {
  "id" "bigint unsigned" [pk, not null, increment]
  "user_id" "bigint unsigned" [not null]
  "product_type_id" "bigint unsigned" [not null]
  "name" varchar(255) [not null]
  "description" text
  "estimated_value" decimal(10,2)
  "status" varchar(255) [not null, default: 'active']
  "created_at" timestamp
  "updated_at" timestamp
}

Table "pruebainvebtadodiwdiom" {
  "id" varchar(20)
  "nombre" varchar(100)
}

Table "roles" {
  "id" "bigint unsigned" [pk, not null, increment]
  "name" varchar(255) [unique, not null]
  "created_at" timestamp
  "updated_at" timestamp
}

Table "sessions" {
  "id" varchar(255) [pk, not null]
  "user_id" "bigint unsigned"
  "ip_address" varchar(45)
  "user_agent" text
  "payload" longtext [not null]
  "last_activity" int [not null]

  Indexes {
    last_activity [type: btree, name: "sessions_last_activity_index"]
    user_id [type: btree, name: "sessions_user_id_index"]
  }
}

Table "users" {
  "id" "bigint unsigned" [pk, not null, increment]
  "name" varchar(255) [not null]
  "email" varchar(255) [unique, not null]
  "email_verified_at" timestamp
  "password" varchar(255) [not null]
  "role_id" "bigint unsigned"
  "remember_token" varchar(100)
  "created_at" timestamp
  "updated_at" timestamp
}

Ref "addresses_user_id_foreign":"users"."id" < "addresses"."user_id" [delete: cascade]

Ref "comments_product_id_foreign":"products"."id" < "comments"."product_id" [delete: cascade]

Ref "comments_user_id_foreign":"users"."id" < "comments"."user_id" [delete: cascade]

Ref "exchanges_product_offered_id_foreign":"products"."id" < "exchanges"."product_offered_id" [delete: cascade]

Ref "exchanges_product_requested_id_foreign":"products"."id" < "exchanges"."product_requested_id" [delete: cascade]

Ref "exchanges_user_offering_id_foreign":"users"."id" < "exchanges"."user_offering_id" [delete: cascade]

Ref "exchanges_user_receiving_id_foreign":"users"."id" < "exchanges"."user_receiving_id" [delete: cascade]

Ref "messages_receiver_id_foreign":"users"."id" < "messages"."receiver_id" [delete: cascade]

Ref "messages_sender_id_foreign":"users"."id" < "messages"."sender_id" [delete: cascade]

Ref "notifications_user_id_foreign":"users"."id" < "notifications"."user_id" [delete: cascade]

Ref "product_images_product_id_foreign":"products"."id" < "product_images"."product_id" [delete: cascade]

Ref "products_product_type_id_foreign":"product_types"."id" < "products"."product_type_id"

Ref "products_user_id_foreign":"users"."id" < "products"."user_id" [delete: cascade]

Ref "users_role_id_foreign":"roles"."id" < "users"."role_id"
